Tenant Issues and Alignment issue fixes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -58,7 +58,7 @@ p {
 
 .content {
   display: flex;
-  margin: 82px auto 32px;
+  margin: 0px auto 32px;
   padding: 100px;
   position: relative;
   min-height: 41vh;
