--- a/src/app/protected/expense/expense.component.scss
+++ b/src/app/protected/expense/expense.component.scss
@@ -1,5 +1,25 @@
 :host {
     display: flex;
     justify-content: center;
-    margin: -10vh 0px;
-  }
+}
+
+data-table {
+  justify-content: center;
+}
+
+.mat-mdc-row .mat-mdc-cell {
+  border-bottom: 1px solid transparent;
+  border-top: 1px solid transparent;
+  cursor: pointer;
+}
+
+.mat-mdc-row:hover .mat-mdc-cell {
+  border-color: currentColor;
+}
+
+.title-bar {
+height: 2.5%;
+display: flex;
+font-weight: 600;
+z-index: 1000;
+}
