--- a/src/app/protected/hostel/create-update-hostel/create-update-hostel.component.scss
+++ b/src/app/protected/hostel/create-update-hostel/create-update-hostel.component.scss
@@ -1,7 +1,6 @@
 :host {
   display: flex;
   justify-content: center;
-  margin: -10vh 0px;
 }
 
 .title-bar {
